# apdl

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md
.github/workflows/: ci.yml  release.yml
apdl-marketing/: APDL-Business-Overview.pptx  APDL-Developer-Guide.pptx  APDL-Integration-Guide.docx
infra/docker/: docker-compose.deps.yml  docker-compose.yml
infra/k8s/base/: agents-deployment.yaml  clickhouse-writer-deployment.yaml  config-deployment.yaml  configmap.yaml  ingestion-deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  query-deployment.yaml
infra/k8s/overlays/dev/: kustomization.yaml
infra/k8s/overlays/prod/: hpa.yaml  kustomization.yaml  pdb.yaml
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/terraform/modules/clickhouse/: main.tf  outputs.tf  user_data.sh.tpl  (+1 more)
pipeline/clickhouse/migrations/: 001_events.sql  002_sessions.sql  003_experiments.sql  004_materialized_views.sql  005_pgvector_setup.sql
pipeline/clickhouse/schemas/: events.sql
pipeline/flink/jobs/: aggregations.py  event_enrichment.py  sessionization.py
pipeline/flink/sql/: materialized.sql
pipeline/kafka/: topics.yaml
pipeline/redis/: Dockerfile  clickhouse_writer.py  requirements.txt  streams.yaml
scripts/: setup.sh
sdk/javascript/: package-lock.json  package.json  rollup.config.ts  tsconfig.json  vitest.config.ts
sdk/javascript/src/: index.ts
services/agents/: Dockerfile  pyproject.toml
services/agents/app/: main.py
services/config/: CMakeLists.txt  Dockerfile  conanfile.txt  pyproject.toml
services/config/app/: main.py  utils.py
services/config/app/flags/: evaluator.py
services/config/app/models/: schemas.py
services/config/app/routers/: admin.py  flags.py  stream.py
services/config/app/sse/: broadcaster.py
services/config/app/store/: postgres.py  redis_cache.py
services/config/include/apdl/flags/: evaluator.h
services/config/include/apdl/handlers/: admin.h  flags.h  stream.h
services/config/include/apdl/sse/: broadcaster.h
services/config/include/apdl/store/: postgres.h  redis_cache.h
services/config/src/: main.cpp
services/config/src/flags/: evaluator.cpp
services/config/src/handlers/: admin.cpp  flags.cpp  stream.cpp
services/config/src/sse/: broadcaster.cpp
services/config/src/store/: postgres.cpp  redis_cache.cpp
services/config/tests/: test_broadcaster.cpp  test_broadcaster.py  test_evaluator.cpp  test_evaluator.py  test_flags.cpp
services/ingestion/: CMakeLists.txt  Dockerfile  conanfile.txt  pyproject.toml
services/ingestion/app/: main.py
services/ingestion/app/middleware/: auth.py  rate_limit.py
services/ingestion/app/models/: schemas.py
services/ingestion/app/routers/: events.py
services/ingestion/app/streaming/: redis_producer.py
services/ingestion/app/validation/: schema.py
services/ingestion/include/apdl/handlers/: events.h
services/ingestion/include/apdl/middleware/: auth.h  rate_limit.h
services/ingestion/include/apdl/streaming/: redis_producer.h
services/ingestion/include/apdl/util/: json.h
services/ingestion/include/apdl/validation/: schema.h
services/ingestion/src/: main.cpp
services/ingestion/src/handlers/: events.cpp
services/ingestion/src/middleware/: auth.cpp  rate_limit.cpp
services/ingestion/src/streaming/: redis_producer.cpp
services/ingestion/src/util/: json.cpp
services/ingestion/src/validation/: schema.cpp
services/ingestion/tests/: test_events.py  test_events_handler.cpp  test_schema_validation.cpp  test_validation.py
services/query/: Dockerfile  pyproject.toml
services/query/app/: main.py
services/query/tests/: test_endpoints.py  test_queries.py  test_statistics.py
(+84 files in other folders)
